[project]
name = "pubmed-paper-scraper"
version = "0.1.0"
description = "Fetch research papers from non-academic authors"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests (>=2.32.4,<3.0.0)", "typer (>=0.16.0,<0.17.0)", "pandas (>=2.3.1,<3.0.0)", "rich (>=14.0.0,<15.0.0)"]

[tool.poetry.scripts]
get-papers-list = "cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
